<resources>
    <string name="app_name">ManitasProject</string>
    <string name="txt_title">Manitas</string>
    <string name="btn_aprendizaje">Aprendizaje</string>
    <string name="btn_juegos">Juegos</string>
    <string name="btn_options">Opciones</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="salir">Salir</string>

    //Inicio de sesión
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="recordame">Recordarme</string>
    <string name="olvidarContra">Olvidé mi contraseña</string>
    <string name="version">Versión 1.0</string>

    //Registro
    <string name="nombre_ape">Nombre y Apellido</string>
    <string name="correo"> Correo</string>
    <string name="contraseña"> Contraseña</string>
    <string name="conf_contraseña">Confirmar Contraseña</string>
    <string name="edad">Edad</string>
    <string name="telefono">Teléfono</string>
    <string name="sexo">Sexo</string>

    //layout aprendizaje
    <string name="numeros">Números</string>
    <string name="colores">Colores</string>
    <string name="animales">Animales</string>
    <string name="vocales">Vocales</string>
    <string name="abecedario">Abecedario</string>
    <string name="dias">Días de la Semana</string>
    <string name="meses">Meses del Año</string>
    <string name="saludos">Saludos</string>
    <string name="basico">Básico</string>
    <string name="verbos">Verbos</string>
    <string name="operaciones">Operaciones Matemáticas</string>
    <string name="volver">Volver</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="l_1">Lección 1</string>
    <string name="l_2">Lección 2</string>
    <string name="l_3">Lección 3</string>

    //layout opciones
    <string name="cambiarcontrasena">Cambiar Contraseña</string>
    <string name="contrasenaactual">Contraseña Actual</string>
    <string name="contrasenanueva">Contraseña Nueva</string>
    <string name="confcontrasenanueva">Confirmar Contraseña Nueva</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    //layout restablecer contraseña
    <string name="restablecer">Restablecer Contraseña</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>