<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center_horizontal"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/manitasbanner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_contrasena"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_confContrasena"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conf_contraseña"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_Edad"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sexo"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerSexo"
            android:layout_width="145dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:padding="10dp"
        android:text="@string/registrarse" />

</LinearLayout>