<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuActivity"
    android:background="@color/backgroundManitas"
    android:orientation="vertical"
    android:padding="15dp">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="166dp"
            app:srcCompat="@drawable/log"
            android:background="@drawable/custom_image_logo"
            android:contentDescription="@string/txt_title">

        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3sp">

        <TextView
            android:id="@+id/txt_cerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesion"
            android:textColor="@color/colorB"
            android:textStyle="italic"
            android:textSize="18dp"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_activity_menu"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp">


        <Button
            android:id="@+id/btn_aprendizaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_options"
            android:paddingHorizontal="40dp"
            android:text="@string/btn_aprendizaje"
            android:textColor="@color/white"
            android:onClick="options"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_juegos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/btn_layout_options"
            android:onClick="options"
            android:paddingHorizontal="60dp"
            android:text="@string/btn_juegos"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_options"
            android:paddingHorizontal="50dp"
            android:text="@string/btn_options"
            android:textColor="@color/white"
            android:onClick="options"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>





</LinearLayout>