<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".OptionsActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            app:srcCompat="@drawable/log"
            android:background="@drawable/custom_image_logo"
            android:contentDescription="@string/txt_title">

        </ImageView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_activity_menu"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/textNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:textSize="24sp"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/correo"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textCorreo"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/edad"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textEdad"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/telefono"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textTelefono"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/sexo"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textSexo"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:enabled="false"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textCambioContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/cambiarcontrasena"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/contrasenaactual"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textContrasenaActual"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/contrasenanueva"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textContrasenaNueva"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:text="@string/confcontrasenanueva"
                    android:gravity="center_vertical" />

                <EditText
                    android:id="@+id/textConfContrasenaNueva"
                    android:layout_width="279dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp" >

                <Button
                    android:id="@+id/btn_guardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_border"
                    android:text="@string/cancelar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>