<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdcd3"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10sp">


        <Button
            android:id="@+id/btn_aprendizaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_learning_principal"
            android:paddingHorizontal="40dp"
            android:text="@string/btn_aprendizaje"
            android:textColor="#00838F"
            android:onClick="options"
            />

        <Button
            android:id="@+id/btn_juegos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/btn_games_principal"
            android:clickable="true"
            android:onClick="options"
            android:paddingHorizontal="30dp"
            android:text="@string/btn_juegos"
            android:textColor="@color/colorOrange" />

        <Button
            android:id="@+id/btn_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_options_principal"
            android:paddingHorizontal="30dp"
            android:text="@string/btn_options"
            android:textColor="@color/colorPurple"
            android:onClick="options"
            />

    </LinearLayout>

</LinearLayout>

