<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundManitas"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MonthsLearnActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_image_logo"
            android:contentDescription="@string/txt_title"
            app:srcCompat="@drawable/log">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"></FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="1dp">

            <Button
                android:id="@+id/btn_l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:onClick="optionsLearnMonths"
                android:background="@drawable/button_rounded_border"
                android:text="@string/l_1"></Button>

            <Button
                android:id="@+id/btn_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:onClick="optionsLearnMonths"
                android:background="@drawable/button_rounded_border"
                android:text="@string/l_2"></Button>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>